# investate

./: .gitignore  README.md  setup (cavart-One-Mix3-Pro's conflicted copy 2021-12-30).cfg  setup.cfg
.github/workflows/: ci.yml
docsrc/: conf.py  index.rst  table_of_contents.rst
docsrc/module_docs/investate/: backtesting.rst  backtesting_examples.rst  features.rst  file_utils.rst  insider_trading.rst  moving_average.rst  plotting.rst  quandl_data.rst  real_estate_vs_stock.rst  regular_stock_invest.rst  series_utils.rst  streamlit_house_app.rst  test_real_estate_vs_stock.rst  trends.rst  utils.rst
investate/: Dockerfile  __init__.py  backtesting.py  backtesting_examples.py  basktesting.py  crypto.py  data_apis.py  dev.py  dev_notebook.ipynb  df_utils.py  features.py  file_utils.py  gan_stocks.py  insider_trading.py  moving_average.py  patter_detection.py  plotting.py  quandl_data.py  real_estate_vs_stock.py  regular_stock_invest.py  series_utils.py  streamlit_house_app.py  test_real_estate_vs_stock.py  trends.py  tw_props.py  utils.py
investate/test_dfs/: eth.csv  qqq.csv  vix.csv
