[metadata]
name = investate
version = 0.1.7
url = https://github.com/cavart28/investate/
platforms = any
description_file = README.md
description = Tools to find the value over time of various investments mainly to compare with real estate investment
root_url = https://github.com/cavart28/
author = Christian Avart
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		invest
		real estate
		finance
		backtesting
display_name = investate

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	pandas
	matplotlib
	progressbar2
        python-dateutil
	py2store
        tiingo
	pandas-datareader
	pytest
	quandl
	requests
	seaborn
	streamlit
